--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -40,3 +40,13 @@ h5 {
 h6 {
     font-size: 1.5rem;
 }
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    li {
+        list-style: none;
+    }
+}
