Added a navbar and made it mobile responsive

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -51,6 +51,14 @@ ul {
     }
 }
 
+.main-wrapper {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
 .logo {
     font-family: 'Heebo', sans-serif;
 }
+
+@import 'mobile';
