--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -13,6 +13,35 @@
 
 // Tablet Size
 @media screen and (max-width: 768px) {
+    h1 {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    h4 {
+        font-size: 2rem;
+    }
+
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    h6 {
+        font-size: 1rem;
+    }
+
+    p {
+        font-size: .8rem;
+    }
+
+
     .main-wrapper {
         overflow-x: hidden;
     }
