--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,80 @@
 
     to {
         opacity: 1;
-        transform: translateX(0)
+        transform: translateX(0);
+    }
+}
+
+// Showcase
+.showcase {
+    height: 100%;
+    color: $gray-1;
+    padding: 1.5rem 0;
+
+    .text-group-1,
+    .text-group-2,
+    .form-section {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1rem 2rem;
+        p:first-child {
+            color: $light-blue-color;
+        }
+    }
+
+    .image-wrapper {
+        img {
+            border-radius: 10px;
+        }
+    }
+
+    .text-group-2 {
+        margin: 1rem 0;
+
+        h4 {
+            margin: 1rem 0;
+        }
+
+        p {
+            width: 75%;
+        }
+    }
+    .form-section {
+        .form {
+            width: 100%;
+            color: $gray-2;
+    
+            .form-group {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                position: relative;
+    
+                label {
+                    font-size: 0.8rem;
+                    margin: .5rem 0;
+                }
+    
+                input {
+                    width: 70%;
+                    padding: 0.8rem;
+                    border-radius: 5px;
+                    border: none;
+                    background: $gray-3;
+                }
+    
+                .btn {
+                    position: absolute;
+                    background: $light-blue-color;
+                    color: $gray-3;
+                    bottom: 0;
+                    right: 30%;
+                }
+            }
+        }
+
     }
 }
 
