--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
             display: flex;
             justify-content: space-around;
             width: 60%;
+            z-index: 99;
             .nav-item {
                 // margin: 0 0.5rem;
                 font-size: 1.3rem;
@@ -57,7 +58,6 @@
 
 // Showcase
 .showcase {
-    height: 100%;
     color: $gray-1;
     padding: 1.5rem 0;
 
