--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -128,6 +128,7 @@
             }
         }
         .form-section {
+            margin-bottom: 4rem;
             .form {
                 .form-group {
                     input {
