--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 2.5rem;
+        margin: 2rem 0;
         min-height: 8vh;
 
         .nav-links {
