Make the services mobile responsive

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -142,4 +142,15 @@
             }
         }
     }
+
+    .our-services {
+        .text-content {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .text-group {
+                width: 100%
+            }
+        }
+    }
 }
