--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,6 +123,11 @@
                     color: $gray-3;
                     bottom: 0;
                     right: 30%;
+
+                    &:hover {
+                        transition: all .3s ease;
+                        background: lighten($color: $light-blue-color, $amount: 5%);
+                    }
                 }
             }
         }
@@ -144,6 +149,7 @@
             padding: 1rem;
             border-radius: 10px;
             margin: 1rem;
+            margin-bottom: 4rem;
             width: 25%;
             display: flex;
             flex-direction: column;
