Added the desktop styling to the our work section

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -115,6 +115,7 @@
     }
 
     .showcase {
+        padding: 2rem 0;
         .text-group-1,
         .text-group-2,
         .form-section {
@@ -144,6 +145,7 @@
     }
 
     .our-services {
+        padding: 2rem 0;
         .text-content {
             flex-direction: column;
             justify-content: center;
