--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,6 +62,7 @@
 // Showcase
 .showcase {
     color: $gray-1;
+    padding: 4rem 0;
 
     .text-group-1,
     .text-group-2,
@@ -125,8 +126,11 @@
                     right: 30%;
 
                     &:hover {
-                        transition: all .3s ease;
-                        background: lighten($color: $light-blue-color, $amount: 5%);
+                        transition: all 0.3s ease;
+                        background: lighten(
+                            $color: $light-blue-color,
+                            $amount: 5%
+                        );
                     }
                 }
             }
@@ -135,7 +139,7 @@
 }
 
 .our-services {
-    margin: 2rem 0;
+    padding: 4rem 0;
     h5 {
         margin-bottom: 1rem;
     }
@@ -154,7 +158,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            transition: all .3s ease;
+            transition: all 0.3s ease;
 
             &:hover {
                 background: #fff;
@@ -162,11 +166,14 @@
                 box-shadow: 5px 10px 30px 0px rgba(51, 51, 51, 0.1);
 
                 .btn {
-                    transition: all .3s ease;
+                    transition: all 0.3s ease;
                     background: $light-blue-color;
                     color: $gray-3;
                     &:hover {
-                        background: lighten($color: $light-blue-color, $amount: 5%);
+                        background: lighten(
+                            $color: $light-blue-color,
+                            $amount: 5%
+                        );
                     }
                 }
             }
@@ -196,6 +203,49 @@
             .btn {
                 margin-top: 1rem;
             }
+        }
+    }
+}
+
+.our-work {
+    padding: 4rem 0;
+
+    h5 {
+        width: 40%;
+        padding-bottom: 2.5rem;
+    }
+
+    .main-wrapper {
+        display: grid;
+        width: 100%;
+        margin: 2rem 0;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        .wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            &:nth-child(even) {
+                margin-top: -4rem;
+            }
+
+            img {
+                width: 80%;
+                border-radius: 10px;
+                margin-bottom: 1rem;
+            }
+            small {
+                color: $gray-2;
+            }
+        }
+    }
+    .link-wrapper {
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            color: $light-blue-color
         }
     }
 }
