--- a/scss/main.scss
+++ b/scss/main.scss
@@ -247,7 +247,53 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            color: $light-blue-color
+            color: $light-blue-color;
+        }
+    }
+}
+
+.our-team {
+    height: 100%;
+    padding: 2rem 0;
+    .main-wrapper {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .text-content {
+            width: 25%;
+            
+            p {
+                &:first-child {
+                    color: $red-color;
+                }
+            }
+        }
+
+        .image-wrapper {
+            display: grid;
+            grid-template-areas:
+                'person3 person1'
+                'person3 person2';
+            gap: 1rem;
+
+            img {
+                width: 100%;
+                border-radius: 10px;
+            }
+
+            .person1 {
+                grid-area: person1;
+            }
+            .person2 {
+                grid-area: person2;
+            }
+            .person3 {
+                align-self: center;
+                grid-area: person3;
+            
+            }
         }
     }
 }
