--- a/scss/main.scss
+++ b/scss/main.scss
@@ -298,12 +298,95 @@
             p {
                 color: $gray-2;
             }
-            
+
             .person4 {
                 margin-right: 1rem;
                 max-width: 78px;
             }
         }
+    }
+}
+
+.main-footer {
+    background: #100e1d;
+    color: #fff;
+    padding: 1rem 0;
+    min-height: 30vh;
+    width: 100%;
+    display: flex;
+    .main-wrapper {
+        height: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        a {
+            color: #fff;
+        }
+
+        .social {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            .social-links {
+                display: flex;
+                text-align: center;
+
+                img {
+                    max-width: 36px;
+                    margin: 0.8rem;
+                }
+            }
+        }
+
+        .form-section {
+            .form {
+                width: 100%;
+                .form-group {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    position: relative;
+
+                    label {
+                        font-size: 0.8rem;
+                        margin: 0.5rem 0;
+                    }
+
+                    input {
+                        width: 150%;
+                        padding: 0.8rem;
+                        padding-right: 1.5rem;
+                        border-radius: 5px;
+                        border: none;
+                        background: $gray-3;
+                    }
+
+                    .btn {
+                        position: absolute;
+                        background: $light-blue-color;
+                        color: $gray-3;
+                        bottom: 0;
+                        right: -50%;
+
+                        &:hover {
+                            transition: all 0.3s ease;
+                            background: lighten(
+                                $color: $light-blue-color,
+                                $amount: 5%
+                            );
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .copyright-info {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
     }
 }
 
