--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -55,6 +55,7 @@ ul {
     height: 100%;
     width: 100%;
     position: relative;
+    overflow-x: hidden;
 }
 
 .container {
@@ -86,7 +87,7 @@ img {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            position: relative;
+
 
             label {
                 font-size: 0.8rem;
@@ -94,18 +95,15 @@ img {
             }
 
             input {
-                padding: 0.8rem;
-                padding-right: 1.5rem;
+                padding: 0.8rem 0;
                 border-radius: 5px;
                 border: none;
                 background: $gray-3;
             }
 
             .btn {
-                position: absolute;
                 background: $light-blue-color;
                 color: $gray-3;
-                bottom: 0;
 
                 &:hover {
                     transition: all 0.3s ease;
