--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,12 +92,16 @@
     }
     .form-section {
         .form {
+            position: relative;
             .form-group {
+                display: flex;
                 input {
                     width: 70%;
                 }
                 .btn {
+                    position: absolute;
                     right: 30%;
+                    bottom: 0;
                 }
             }
         }
@@ -212,7 +216,6 @@
 }
 
 .our-team {
-    height: 100%;
     padding: 4rem 0;
     .main-wrapper {
         height: 100%;
@@ -283,7 +286,7 @@
     padding: 1rem 0;
     min-height: 30vh;
     width: 100%;
-    display: flex;
+    position: relative;
     .main-wrapper {
         height: 100%;
         display: flex;
@@ -301,7 +304,6 @@
             text-align: center;
             .social-links {
                 display: flex;
-                text-align: center;
 
                 img {
                     max-width: 36px;
@@ -313,11 +315,14 @@
         .form-section {
             .form {
                 .form-group {
+                    position: relative;
                     input {
                         width: 150%;
                     }
                     .btn {
+                        position: absolute;
                         right: -50%;
+                        bottom: 0;
                     }
                 }
             }
@@ -328,6 +333,8 @@
         text-align: center;
         display: flex;
         justify-content: center;
+        position: absolute;
+        bottom: 0;
     }
 }
 
