--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -98,7 +98,7 @@ img {
             }
 
             input {
-                padding: 0.8rem 0;
+                padding: 0.8rem .5rem;
                 border-radius: 5px;
                 border: none;
                 background: $gray-3;
